ddl and json for postman